public/css/index-datagrid.css
/* ... */
.z-scroller .z-content-wrapper {
  -webkit-box-flex: 1 1 auto;
  -moz-box-flex: 1 1 auto;
  -ms-box-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
  -webkit-align-content: flex-start;
  align-content: flex-start;
  -webkit-justify-content: flex-start;
  -webkit-box-pack: flex-start;
  flex-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  flex-direction: row;
  -webkit-flex-flow: row;
  -moz-flex-flow: row;
  -ms-flex-flow: row;
  -o-flex-flow: row;
  flex-flow: row;
  flex-flow: row;
  -webkit-box-orient: horizontal;
  position: relative;
  overflow: hidden;
  z-index: 10;
}
.z-scroller .z-content-wrapper-fix {
  z-index: -1;
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  -ms-box-flex: 1;
  -ms-flex: 1;
  -webkit-flex: 1;
  flex: 1;
}
.z-vertical-scroller {
  overflow: hidden;
  overflow-y: auto;
  right: 0px;
  top: 0px;
  width: 1px;
  -webkit-box-flex: none;
  -moz-box-flex: none;
  -ms-box-flex: none;
  -ms-flex: none;
  -webkit-flex: none;
  flex: none;
  visibility: hidden;
}
.z-horizontal-scroller {
  height: 0.1px;
  visibility: hidden;
}
.z-vertical-scrollbar {
  overflow: hidden;
  position: absolute;
  height: 100%;
  right: 0px;
  top: 0px;
}
.z-horizontal-scrollbar {
  transform: translate3d(0px, 0px, 1px);
  -webkit-box-flex: 0 0 auto;
  -moz-box-flex: 0 0 auto;
  -ms-box-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  flex: 0 0 auto;
  height: auto;
  width: 100%;
  position: relative;
  left: 0px;
  bottom: 0px;
  overflow: auto;
  z-index: 89;
}
.z-horizontal-scrollbar.mac-fix {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-flex-flow: row;
  -moz-flex-flow: row;
  -ms-flex-flow: row;
  -o-flex-flow: row;
  flex-flow: row;
  flex-flow: row;
  -webkit-box-orient: horizontal;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
  -webkit-align-content: flex-start;
  align-content: flex-start;
  -webkit-justify-content: stretch;
  -webkit-box-pack: stretch;
  flex-pack: justify;
  -ms-flex-pack: justify;
  justify-content: stretch;
}
.z-horizontal-scrollbar-fix {
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  -ms-box-flex: 1;
  -ms-flex: 1;
  -webkit-flex: 1;
  flex: 1;
  overflow: auto;
}
.loadmask {
  z-index: 100;
}
.z-unselectable,
.react-datagrid .z-header-menu-column .menu-row {
  touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
.react-datagrid,
.react-datagrid * {
  box-sizing: border-box;
}
.react-datagrid .z-resize-proxy {
  position: absolute;
  height: 100%;
  top: 0px;
  display: none;
  width: 3px;
  z-index: 1000;
  border-left: 1px solid #868686;
}
.react-datagrid.z-columns-resizable .z-resize-proxy {
  display: block;
}
.react-datagrid {
    z-index: -1;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  align-items: stretch;
}
.react-datagrid .z-row,
.react-datagrid .react-datagrid-pagination-toolbar {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
.react-datagrid .loadmask {
  z-index: 100;
}
.react-datagrid .z-header-menu-column {
  z-index: 100;
}
.react-datagrid > .z-inner {
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  -ms-box-flex: 1;
  -ms-flex: 1;
  -webkit-flex: 1;
  flex: 1;
  overflow: hidden;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  -webkit-flex-flow: column;
  -moz-flex-flow: column;
  -ms-flex-flow: column;
  -o-flex-flow: column;
  flex-flow: column;
  flex-flow: column;
  -webkit-box-orient: vertical;
  box-orient: vertical;
}
.react-datagrid > .z-inner .z-wrapper {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  -webkit-flex-flow: column;
  -moz-flex-flow: column;
  -ms-flex-flow: column;
  -o-flex-flow: column;
  flex-flow: column;
  flex-flow: column;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-box-flex: 1 1 auto;
  -moz-box-flex: 1 1 auto;
  -ms-box-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  -webkit-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow: hidden;
}
.react-datagrid .z-header-wrapper,
.react-datagrid .z-footer-wrapper {
  width: 100%;
}
.react-datagrid .z-table {
  display: block;
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  -ms-box-flex: 1;
  -ms-flex: 1;
  -webkit-flex: 1;
  flex: 1;
/** 2 RULES FOR SAFARI VERTICAL SCROLLBAR */
  transform: translate3d(0px, 0px, 0px);
  position: relative;
  z-index: 10;
}
.react-datagrid .z-header,
.react-datagrid .z-summary,
.react-datagrid .z-table .z-row {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-flex-flow: row;
  -moz-flex-flow: row;
  -ms-flex-flow: row;
  -o-flex-flow: row;
  flex-flow: row;
  flex-flow: row;
  -webkit-box-orient: horizontal;
 
}
.react-datagrid .z-mask-wrapper {
  bottom: 0px;
  width: 100%;
  position: absolute;
  display: none;
}
.react-datagrid.z-loading .z-mask-wrapper {
  display: block;
}
.react-datagrid.z-empty .z-content-wrapper-fix {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}
.react-datagrid.z-empty .z-table-wrapper {
  -webkit-justify-content: center;
  -webkit-box-pack: center;
  flex-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  align-items: center;
}
/* ... */

